Added Chinese and Italian translations files

--- a/app/mainWindow/i18n/zh.json
+++ b/app/mainWindow/i18n/zh.json
@@ -1,85 +1,4 @@
 {
-  "address_book_enter_name": "输入名称: ",
-  "address_book_enter_address": "输入地址: ",
-  "address_book_enter_payment_id": "输入付款ID（可选）: ",
-  "address_book_welcome": "欢迎使用您的通讯录！",
-  "address_book_no_contacts": "您尚未保存任何联系人。完成后,它们会显示在这里。",
-  "about_to_rescan_beginning": "您将要从区块重新扫描您的钱包",
-  "" about_to_rescan_end_1": ",这是钱包的原始起始高度。确定要执行此操作吗？重新扫描可能需要很长时间。",
-  "about_to_rescan_end_2": "。您确定要执行此操作吗？重新扫描可能需要很长时间。",
-  "about_to_send_1": "您将要发送",
-  "about_to_send_2": "您要继续吗？",
-  "fiat_alternate": "替代显示货币: ",
-  "startup_select_type": "选择导入类型",
-  "startup_send_to": "发送至: ",
-  "startup_type_selection": "您要从种子或密钥导入吗？",
-  "home_amount": "金额",
-  "home_in_memory": "仍在内存池中",
-  "home_view_explorer": "在块浏览器中查看",
-  "home_no_transaction_yet": "您还没有任何交易。完成后,它们会显示在这里。",
-  "import_restore_error": "还原错误！",
-  "import_restore_error_description": "还原失败,种子正确吗？请检查您的详细信息,然后重试。",
-  "import_restore_wallet_version": "Cirquity钱包文件（v0）",
-  "import_wallet_error": "钱包保存错误！",
-  "import_wallet_error_description": "钱包未成功保存。请检查您的目录权限,然后重试。",
-  "import_enter_seed": "输入种子",
-  "import_secure": "安全",
-  "import_welcome": "欢迎使用钱包导入向导。请输入您的助记符种子。",
-  "import_mnemonic_seed": "助记种子: ",
-  "import_mnemonic_seed_placeholder": "输入您的助记符种子",
-  "import_scan_height": "扫描高度: （可选）",
-  "import_scan_height_optional": "可选。如果不确定,默认为0。",
-  "import_verify_confirm": "确认下面的地址是您期望的地址。",
-  "import_verify_confirm_correct": "如果不正确,请返回并再次检查您的种子。",
-  "import_verify_wallet": "导入的钱包地址: ",
-  "import_secure_password": "为您的钱包设置密码。请注意不要忘记它。",
-  "import_secure_password_enter": "输入密码: ",
-  "import_secure_password_enter_placeholder": "输入密码",
-  "import_secure_password_confirm": "确认密码: ",
-  "import_secure_password_confirm_placeholder": "确认密码",
-  "import_secure_password_no_match": "密码不匹配！",
-  "import_secure_password_show": "显示密码: ",
-  "import": "将电子钱包另存为",
-  "import_import_wallet_error_message": "钱包未成功还原。请重试。",
-  "import_import_wallet_error_title": "还原钱包时出错！",
-  "import_import_wallet_message": "钱包已成功还原。请为您的钱包设置密码。",
-  "import_import_wallet_title": "钱包已成功还原！",
-  "import_keys_seed": "从密钥或种子中恢复",
-  "import_save_wallet_message": "您不能将钱包保存在安装目录中。Windows安装程序将在升级应用程序时删除目录中的所有文件,因此是不允许的。",
-  "import_save_wallet_title": "无法保存到安装目录",
-  "import_key_error": "还原错误！",
-  "import_key_error_restore": "还原未成功,您的种子是否正确？请检查您的详细信息,然后重试。",
-  "import_key_error_save": "钱包保存错误！",
-  "import_key_error_save_desc": "未成功保存钱包。请检查目录权限,然后重试。",
-  "import_key_enter_seed": "欢迎使用钱包导入向导。请输入您的钱包密钥。",
-  "import_key_enter_seed_private": "私人消费金钥: ",
-  "import_key_enter_seed_private_placeholder": "输入您的私人消费密钥",
-  "import_key_enter_seed_private_view": "私人视图键: ",
-  "import_key_enter_seed_private_view_placeholder": "输入您的私人查看密钥",
-  "import_key_verify": "确认下面的地址是您期望的地址。",
-  "import_key_verify_correct": "如果不正确,请返回并再次检查您的密钥。",
-  "import_key_imported": "导入的钱包地址: ",
-  "import_key_secure": "为您的钱包设置密码。请注意不要忘记它。",
-  "amount": "Amount",
-  "amount_to_send": "要发送的金额",
-  "amount_to_send_input_placeholder": "要发送多少CIRQ（例如100）",
-  "change": "更改密码",
-  "change_passwd_confirm_new_passwd": "确认密码",
-  "change_passwd_confirm_new_passwd_input_placeholder": "再次输入您的新密码以确认...",
-  "change_passwd_enter_current_passwd": "输入当前密码",
-  "change_passwd_enter_current_passwd_input_placeholder": "输入您的当前密码...",
-  "change_passwd_enter_current_passwd_no_passwd_input_placeholder": "此钱包没有密码",
-  "change_passwd_enter_new_passwd": "输入新密码",
-  "change_passwd_enter_new_passwd_input_placeholder": "输入您的新密码...",
-  "change_passwd_incorrect_passwd_message": "您没有正确输入当前密码。请重试。",
-  "change_passwd_incorrect_passwd_title": "密码错误！",
-  "change_passwd_passwd_change_success_message": "密码已成功更改。",
-  "change_passwd_passwd_change_success_title": "已保存！",
-  "change_passwd_passwd_change_unsuccess_message": "密码未成功更改。请重试。",
-  "change_passwd_passwd_change_unsuccess_title": "错误！",
-  "change_passwd_passwd_mismatch_message": "您没有输入相同的密码。请重试。",
-  "change_passwd_passwd_mismatch_title": "密码不匹配！",
-  "new_wallet_send_verification_error": "种子验证错误！",
-  "new_wallet_save_error": "电子钱包保存错误！",
-  "new_wallet_save_error_desc": "钱包未成功保存。请检查您的目录权限,然后重试。",
-  "new_wallet_creati
+  "password": "密码",
+  "password_input_placeholder": "输入您的钱包密码..."
+}
