Added Chinese translation

--- a/app/mainWindow/i18n/zh.json
+++ b/app/mainWindow/i18n/zh.json
@@ -1,4 +1,268 @@
 {
-  "password": "密码",
-  "password_input_placeholder": "输入您的钱包密码..."
+  "address_book_enter_name": "输入名称: ",
+  "address_book_enter_address": "输入地址: ",
+  "address_book_enter_payment_id": "输入付款ID（可选）: ",
+  "address_book_welcome": "欢迎使用您的通讯录！",
+  "address_book_no_contacts": "您尚未保存任何联系人。完成后，它们会显示在这里。",
+  "about_to_rescan_beginning": "您将要从区块重新扫描您的钱包",
+  "about_to_rescan_end_1": ",这是钱包的原始起始高度。确定要执行此操作吗？重新扫描可能需要很长时间。",
+  "about_to_rescan_end_2": "。您确定要执行此操作吗？重新扫描可能需要很长时间。",
+  "about_to_send_1": "您将要发送",
+  "about_to_send_2": "您要继续吗？",
+  "fiat_alternate": "替代显示货币: ",
+  "startup_select_type": "选择导入类型",
+  "startup_send_to": "发送至: ",
+  "startup_type_selection": "您要从种子或密钥导入吗？",
+  "home_amount": "金额",
+  "home_in_memory": "仍在内存池中",
+  "home_view_explorer": "在块浏览器中查看",
+  "home_no_transaction_yet": "您还没有任何交易。完成后，它们会显示在这里。",
+  "import_restore_error": "还原错误！",
+  "import_restore_error_description": "还原失败，种子正确吗？请检查您的详细信息，然后重试。",
+  "import_restore_wallet_version": "Cirquity钱包文件（v0）",
+  "import_wallet_error": "钱包保存错误！",
+  "import_wallet_error_description": "钱包未成功保存。请检查您的目录权限，然后重试。",
+  "import_enter_seed": "输入种子",
+  "import_secure": "安全",
+  "import_welcome": "欢迎使用钱包导入向导。请输入您的助记符种子。",
+  "import_mnemonic_seed": "助记种子: ",
+  "import_mnemonic_seed_placeholder": "输入您的助记符种子",
+  "import_scan_height": "扫描高度: （可选）",
+  "import_scan_height_optional": "可选。如果不确定，默认为0。",
+  "import_verify_confirm": "确认下面的地址是您期望的地址。",
+  "import_verify_confirm_correct": "如果不正确，请返回并再次检查您的种子。",
+  "import_verify_wallet": "导入的钱包地址: ",
+  "import_secure_password": "为您的钱包设置密码。请注意不要忘记它。",
+  "import_secure_password_enter": "输入密码: ",
+  "import_secure_password_enter_placeholder": "输入密码",
+  "import_secure_password_confirm": "确认密码: ",
+  "import_secure_password_confirm_placeholder": "确认密码",
+  "import_secure_password_no_match": "密码不匹配！",
+  "import_secure_password_show": "显示密码: ",
+  "import": "将电子钱包另存为",
+  "import_import_wallet_error_message": "钱包未成功还原。请重试。",
+  "import_import_wallet_error_title": "还原钱包时出错！",
+  "import_import_wallet_message": "钱包已成功还原。请为您的钱包设置密码。",
+  "import_import_wallet_title": "钱包已成功还原！",
+  "import_keys_seed": "从密钥或种子中恢复",
+  "import_save_wallet_message": "您不能将钱包保存在安装目录中。Windows安装程序将在升级应用程序时删除目录中的所有文件，因此是不允许的。",
+  "import_save_wallet_title": "无法保存到安装目录",
+  "import_key_error": "还原错误！",
+  "import_key_error_restore": "还原未成功，您的种子是否正确？请检查您的详细信息，然后重试。",
+  "import_key_error_save": "钱包保存错误！",
+  "import_key_error_save_desc": "未成功保存钱包。请检查目录权限，然后重试。",
+  "import_key_enter_seed": "欢迎使用钱包导入向导。请输入您的钱包密钥。",
+  "import_key_enter_seed_private": "私人消费金钥: ",
+  "import_key_enter_seed_private_placeholder": "输入您的私人消费密钥",
+  "import_key_enter_seed_private_view": "私人视图键: ",
+  "import_key_enter_seed_private_view_placeholder": "输入您的私人查看密钥",
+  "import_key_verify": "确认下面的地址是您期望的地址。",
+  "import_key_verify_correct": "如果不正确，请返回并再次检查您的密钥。",
+  "import_key_imported": "导入的钱包地址: ",
+  "import_key_secure": "为您的钱包设置密码。请注意不要忘记它。",
+  "amount": "Amount",
+  "amount_to_send": "要发送的金额",
+  "amount_to_send_input_placeholder": "要发送多少CIRQ（例如100）",
+  "change": "更改密码",
+  "change_passwd_confirm_new_passwd": "确认密码",
+  "change_passwd_confirm_new_passwd_input_placeholder": "再次输入您的新密码以确认...",
+  "change_passwd_enter_current_passwd": "输入当前密码",
+  "change_passwd_enter_current_passwd_input_placeholder": "输入您的当前密码...",
+  "change_passwd_enter_current_passwd_no_passwd_input_placeholder": "此钱包没有密码",
+  "change_passwd_enter_new_passwd": "输入新密码",
+  "change_passwd_enter_new_passwd_input_placeholder": "输入您的新密码...",
+  "change_passwd_incorrect_passwd_message": "您没有正确输入当前密码。请重试。",
+  "change_passwd_incorrect_passwd_title": "密码错误！",
+  "change_passwd_passwd_change_success_message": "密码已成功更改。",
+  "change_passwd_passwd_change_success_title": "已保存！",
+  "change_passwd_passwd_change_unsuccess_message": "密码未成功更改。请重试。",
+  "change_passwd_passwd_change_unsuccess_title": "错误！",
+  "change_passwd_passwd_mismatch_message": "您没有输入相同的密码。请重试。",
+  "change_passwd_passwd_mismatch_title": "密码不匹配！",
+  "new_wallet_send_verification_error": "种子验证错误！",
+  "new_wallet_save_error": "电子钱包保存错误！",
+  "new_wallet_save_error_desc": "钱包未成功保存。请检查您的目录权限，然后重试。",
+  "new_wallet_creation_error": "钱包创建错误！",
+  "new_wallet_creation_error_desc": "您输入的种子与新钱包的种子不匹配。请重试。",
+  "new_wallet_creation_welcome": "欢迎使用钱包创建向导。每个地址都是随机生成的。",
+  "new_wallet_new_address": "您的新地址: ",
+  "new_wallet_create_password": "为您的钱包设置密码。请注意不要忘记它。",
+  "new_wallet_backup": "请安全地备份以下助记符种子。",
+  "new_wallet_backup_mnemonic": "如果丢失，您的资金将永远丢失。",
+  "new_wallet_verify": "输入您的种子以确认您已备份它。",
+  "new_wallet_confirm_seed": "确认种子: ",
+  "node_changer_port": "端口号必须为整数！",
+  "node_changer_remote_node": "远程节点（节点: 端口）",
+  "node_changer_select_node": "选择一个节点: ",
+  "node_changer_connecting": "正在连接...",
+  "node_changer_connecting_wait": "正在连接，请稍候...",
+  "rescanner_description": "您尚未输入有效的块高。输入的必须是正整数。请重试。",
+  "rescanner_warning": "重新扫描警告！",
+  "rescanner_warning_desc": "您将要从块{scanHeight}重新扫描您的钱包。确定要这样做吗？可能需要很长时间。",
+  "rescanner_height_scan": "输入要从...扫描的高度",
+  "scan_codebase": "扫描Coinbase交易: ",
+  "receive_integrated": "创建集成地址",
+  "receive_payment_id": "用于生成的付款ID: ",
+  "receive_change": "更改",
+  "search_contacts": "联系人: ",
+  "search_transactions": "交易记录: ",
+  "search_setting_results": "设置结果: ",
+  "search_no_results": "未找到结果！",
+  "search_on_explorer": "在区块浏览器中搜索",
+  "settings": "{platform}设置",
+  "settings_show_console": "显示控制台",
+  "settings_wallet_password": "更改钱包密码",
+  "settings_backup_wallet": "备份钱包密钥/种子",
+  "settings_change_password": "更改电子钱包密码",
+  "sync_dont_panic": "不要惊慌！您的钱包仍在同步...",
+  "sync_fully": "您的钱包已完全同步。",
+  "sync_node_offline": "连接的节点似乎处于脱机状态。",
+  "sync_title": "同步: ",
+  "timeout_autolock": "不活动的自动锁定: ",
+  "table_label_icon": "图标",
+  "table_label_name": "名称",
+  "table_label_address": "地址",
+  "table_label_payment_id": "付款ID",
+  "table_label_date_time": "日期和时间",
+  "table_label_confirmations": "确认",
+  "table_label_block_height": "块高度",
+  "table_label_unlock_time": "解锁时间",
+  "table_label_transaction_hash": "交易哈希",
+  "change_it": "变更",
+  "fee": "Fee",
+  "attempting_login_to": "尝试登录到",
+  "error": "错误！",
+  "value_too_high": "价值太高！",
+  "js_limit": "由于JavaScript的限制，您最多可以将其设置为35,791分钟。",
+  "autolock_interval": "自动锁定时间间隔（以分钟为单位）: ",
+  "notifications": "Notifications: ",
+  "fusion": "Fusion",
+  "identicon": "Identicon: ",
+  "backup": "备份",
+  "back_to_login": "返回登录",
+  "balance": "Balance",
+  "balance_colon": "余额: ",
+  "balance_no_wallet_open": "没有打开钱包！",
+  "block": "阻止",
+  "cancel": "取消",
+  "clear": "清除",
+  "connect": "Connect",
+  "verify": "Verify",
+  "secure": "安全",
+  "display": "显示",
+  "security": "Security",
+  "log_level": "WalletBackend日志级别: ",
+  "connected_node": "连接的节点（节点: 端口）",
+  "copy_to_clipboard": "复制到剪贴板",
+  "save_to_file": "保存到文件",
+  "create_new_wallet": "创建新钱包",
+  "created_successfully": "您的新钱包已成功创建。请为您的钱包设置密码。",
+  "currently_logged_in": "当前登录到",
+  "date": "Date",
+  "different_wallet": "不同的钱包？",
+  "disable_close_to_tray": "在托盘附近禁用",
+  "dot_csv": ".csv",
+  "enable_dark_mode": "启用黑暗模式",
+  "enable_light_mode": "启用照明模式",
+  "enable_close_to_tray": "启用靠近托盘",
+  "error_opening_wallet": "您的钱包未成功打开。请重试。",
+  "exported_csv": "您的交易已成功导出到",
+  "find_node": "查找节点...",
+  "generate_payment_id": "产生随机付款ID",
+  "has_been_rewound_beginning": "您的钱包已倒退以阻止",
+  "has_been_rewound_end": "，并将从那里再次同步。",
+  "copied": "已复制！",
+  "test": "Test",
+  "generate": "Generate",
+  "hash": "Hash",
+  "enter_seed": "输入种子",
+  "includes_network_fee": "其中包括网络费",
+  "just_received": "您刚收到",
+  "load_more": "加载更多",
+  "login": "登录",
+  "mnemonic_seed": "助记种子",
+  "mnemonic_seed_colon": "助记符: ",
+  "mnemonic_seed_input_placeholder": "在这里输入您的种子。",
+  "new_update": "CirqWallet有更新。您要下载吗？",
+  "no_saving_in_install_dir": "您无法将钱包保存在安装目录中。Windows安装程序将在升级应用程序时删除目录中的所有文件，因此是不允许的。",
+  "node": "Node",
+  "node_fee": "节点费: ",
+  "not_a_valid_number": "无效的数字",
+  "not_created_successfully": "未成功创建钱包。请检查目录权限，然后重试。",
+  "not_saved_successfully": "钱包未成功保存。请检查目录权限，然后重试。",
+  "ok": "OK",
+  "on": "ON",
+  "off": "OFF",
+  "next": "下一个",
+  "back": "Back",
+  "close_to_tray": "靠近纸盘: ",
+  "dark_mode": "黑暗模式: ",
+  "address_book": "通讯录",
+  "search_placeholder": "寻找任何东西...",
+  "open_existing_wallet": "打开现有的钱包",
+  "opened_successfully": "钱包未成功打开。请重试。",
+  "password": "Password",
+  "password_input_placeholder": "输入您的钱包密码...",
+  "payment_id": "付款编号（可选）",
+  "payment_id_input_placeholder": "输入付款ID（可选）",
+  "title_please_confirm_transaction": "请确认交易",
+  "please_enter_valid_height": "请输入有效的块高。",
+  "please_save_your_keys": "请安全安全地保存这些密钥。\n如果丢失了密钥，将无法取回资金。",
+  "private_spend_key": "私人消费金钥",
+  "private_spend_key_colon": "私人支出密钥: ",
+  "private_spend_key_input_placeholder": "输入您的私人消费钥匙...",
+  "private_view_key": "私人视图密钥",
+  "private_view_key_colon": "私人视图键: ",
+  "private_view_key_input_placeholder": "输入您的私密视图键...",
+  "qr_code": "QR Code",
+  "receive": "Receive",
+  "receiving_address": "接收地址",
+  "rescan": "重新扫描",
+  "rescan_wallet": "重新扫描钱包",
+  "rescan_wallet_help": "从历史记录中完全擦除所有交易，并从指定的区块重新扫描钱包。如果留空，则默认为从中扫描最后一个区块的钱包。",
+  "reset": "重置",
+  "reset_complete": "重置成功完成。",
+  "reset_successful": "重置成功完成。",
+  "restart_required": "要更改此设置，需要重新启动应用程序。是否要立即重新启动？",
+  "restore": "恢复",
+  "rewind": "倒带",
+  "rewind_complete": "倒带完成。",
+  "rewind_wallet": "倒带钱包",
+  "rewind_wallet_help": "将电子钱包倒回，保持先前的交易到一个区块高度，然后从那里进行扫描。",
+  "rewinds_wallet_help": "将钱包退回，保持先前的交易到一个区块高度，然后从那里进行扫描。",
+  "saved_successfully": "钱包已成功保存。",
+  "scan_height": "扫描高度（可选）",
+  "scan_height_input_placeholder": "开始扫描的块高度。默认为0。",
+  "scan_height_tip": "可选。如果不确定，默认为0。",
+  "seed_or_keys": "您要从种子或密钥中恢复吗？",
+  "send": "发送",
+  "send_all": "全部发送",
+  "send_to": "发送到",
+  "send_to_value": "发送到{value}",
+  "send_to_address": "发送到地址",
+  "send_to_address_input_placeholder": "输入要向其汇款的Cirquity地址",
+  "send_placeholder": "输入要向其汇款的Cirquity地址或联系人姓名",
+  "send_entire_balance": "发送整个钱包余额",
+  "send_how_much": "发送多少",
+  "send_tx_complete_title": "交易完成！",
+  "send_tx_complete": "您的交易已成功发送。交易哈希: ",
+  "send_tx_error_title": "交易错误！",
+  "show_all": "显示全部",
+  "set_password": "设置密码",
+  "syncing_again_from": "您的钱包现在正从区块中再次同步",
+  "title_created": "已创建！",
+  "title_error_creating_wallet": "保存钱包时出错！",
+  "title_error_opening_wallet": "打开钱包时出错！",
+  "title_no_saving_in_install_directory": "无法保存到安装目录",
+  "title_restart_required": "需要重新启动",
+  "to": "至",
+  "total_with_fees": "费用总额",
+  "total_with_fees_input_placeholder": "包括费用在内的总额",
+  "CIRQ": "CIRQ",
+  "unconfirmed_tx_30_sec_confirm": "此交易未确认。应在30秒内确认！",
+  "unconfirmed": "未确认",
+  "unlock": "解锁",
+  "update_required": "需要更新！",
+  "wallet": "Wallet",
+  "welcome_to_proton": "欢迎使用CirqWallet！"
 }
